@@ -3,3 +3,4 @@ dist
 build
 *.pyc
 *.egg-info
+.idea
